@startuml

title __SCREENS's Class Diagram__\n

  package com.madrat.spaceshooter {
    package com.madrat.spaceshooter.screens {
      class GameOverScreen {
          - stage : Stage
          - skin : Skin
          - menuTable : Table
          - batch : SpriteBatch
          - highScoreFont : BitmapFont
          - totalMoneyFont : BitmapFont
          - scoreFont : BitmapFont
          - coinsFont : BitmapFont
          - gameOverFont : BitmapFont
          - highScoreLayout : GlyphLayout
          - totalMoneyLayout : GlyphLayout
          - scoreLayout : GlyphLayout
          - coinsLayout : GlyphLayout
          - gameOverLayout : GlyphLayout
          - restartBtn : TextButton
          - backBtn : TextButton
          - exitBtn : TextButton
          - sendHighScore : Thread
          - score : int
          - highScore : int
          - money : int
          - totalMoney : int
          - isDisposed : boolean
          + GameOverScreen()
          - setPreviousScreen()
          - updateValues()
          + show()
          + render()
          + resize()
          + pause()
          + resume()
          + hide()
          + dispose()
      }
    }
  }
  

  package com.madrat.spaceshooter {
    package com.madrat.spaceshooter.screens {
      class GameTypeScreen {
          - stage : Stage
          - skin : Skin
          - menuTable : Table
          - singleplayer : TextButton
          - multiplayer : TextButton
          - back : TextButton
          - batch : SpriteBatch
          - highScore : int
          - highScoreFont : BitmapFont
          - highScoreLayout : GlyphLayout
          + GameTypeScreen()
          - getCurrentHighscore()
          + setPreviousScreen()
          + show()
          + render()
          + resize()
          + pause()
          + resume()
          + hide()
          + dispose()
      }
    }
  }
  

  package com.madrat.spaceshooter {
    package com.madrat.spaceshooter.screens {
      class MainGameScreen {
          - isPaused : boolean
          - background : Sprite
          - batch : SpriteBatch
          - sprites : ArrayList<ObjectHandler>
          - scoreFont : BitmapFont
          - scoreLayout : GlyphLayout
          - ammoLayout : GlyphLayout
          - ammoLayoutColor : Color
          - stage : Stage
          - skin : Skin
          - pauseTable : Table
          - PauseMenuTable : Table
          - pauseBtn : ImageButton
          - continueButton : TextButton
          - restartButton : TextButton
          - backButton : TextButton
          - exitButton : TextButton
          + MainGameScreen()
          - openPauseMenu()
          - closePauseMenu()
          + show()
          + render()
          + resize()
          + pause()
          + resume()
          + hide()
          + dispose()
          + unload()
      }
    }
  }
  

  package com.madrat.spaceshooter {
    package com.madrat.spaceshooter.screens {
      class MainMenuScreen {
          - stage : Stage
          - skin : Skin
          - menuTable : Table
          - playButton : TextButton
          - shopButton : TextButton
          - settButton : TextButton
          - exitButton : TextButton
          - sprites : ArrayList<ObjectHandler>
          - batch : SpriteBatch
          - background : Sprite
          + MainMenuScreen()
          + MainMenuScreen()
          - checkName()
          - nameError()
          - setup()
          + displayExit()
          + show()
          + render()
          + resize()
          + pause()
          + resume()
          + hide()
          + dispose()
          + getBatch()
      }
    }
  }
  

  GameOverScreen -up-|> Screen
  GameOverScreen o-- MainGame : game
  GameOverScreen o-- ScrollingBackground : scrollingBackground
  GameOverScreen o-- DialogAlert : exit
  GameOverScreen o-- DialogAlert : error
  GameTypeScreen -up-|> Screen
  GameTypeScreen o-- MainGame : game
  GameTypeScreen o-- ScrollingBackground : scrollingBackground
  MainGameScreen -up-|> Screen
  MainGameScreen o-- MainGame : game
  MainGameScreen o-- PlayerShip : playerShip
  MainGameScreen o-- Spawner : spawner
  MainGameScreen o-- ScrollingBackground : scrollingBackground
  MainGameScreen o-- DialogAlert : confirm
  MainGameScreen o-- MainGameScreen : gameScreen
  MainGameScreen o-- Stats : stats
  MainMenuScreen -up-|> Screen
  MainMenuScreen o-- MainGame : game
  MainMenuScreen o-- ScrollingBackground : scrollingBackground
  MainMenuScreen o-- DialogAlert : exit
  MainMenuScreen o-- DialogAlert : error


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
